// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageHeader - Snapshots > matches snapshot with default props 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pb-6 pt-2"
  data-testid="container"
>
  Header content
</div>
`;

exports[`PageHeader - Snapshots > matches snapshots for additional props 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pb-6 pt-2"
  data-testid="container"
  id="header-id"
>
  Header with ID
</div>
`;

exports[`PageHeader - Snapshots > matches snapshots for additional props 2`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pb-6 pt-2"
  data-testid="page-header"
>
  Header with test ID
</div>
`;

exports[`PageHeader - Snapshots > matches snapshots for different children types 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pb-6 pt-2"
  data-testid="container"
>
  Simple content
</div>
`;

exports[`PageHeader - Snapshots > matches snapshots for different children types 2`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pb-6 pt-2"
  data-testid="container"
>
  <h1>
    Page Title
  </h1>
  <p>
    Page Subtitle
  </p>
</div>
`;

exports[`PageHeader - Snapshots > matches snapshots for different children types 3`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pb-6 pt-2"
  data-testid="container"
>
  <div>
    <span>
      Complex 
      <strong>
        Title
      </strong>
    </span>
    <span>
      Complex 
      <em>
        Subtitle
      </em>
    </span>
  </div>
</div>
`;

exports[`PageHeader - Snapshots > matches snapshots for different configurations 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pb-6 pt-2"
  data-testid="container"
>
  Default header
</div>
`;

exports[`PageHeader - Snapshots > matches snapshots for different configurations 2`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pb-6 pt-2 custom-header"
  data-testid="container"
>
  Custom header
</div>
`;
